Commit intermediaire avant merge de main fait 12-08-2025

--- a/src/app/components/porteurProjet/PorteurProjet/mes-idee-projet/mes-idee-projet.component.html
+++ b/src/app/components/porteurProjet/PorteurProjet/mes-idee-projet/mes-idee-projet.component.html
@@ -6,6 +6,38 @@
   </div>
 
   <div class="idee-cadre">
+    @for (idee of mesProjets; track $index) {
+    <div class="card">
+      <div class="card-header">
+        <h3 class="project-title">{{idee.titre}}</h3>
+        <div class="header-actions">
+          <span class="tag">{{idee.domaine[0]}}</span>
+          <i class="ri-more-2-fill"></i>
+        </div>
+      </div>
+      <p class="description">
+        {{idee.description}}
+      </p>
+      <div class="cahier-de-charge">
+        <i class="ri-file-text-line"></i>
+        <span>Voir le cahier des charges</span>
+      </div>
+      <div class="card-footer">
+        <span class="date">Publié : {{idee.datePublication}}</span>
+        <div class="interaction">
+          <div class="interaction-item">
+            <i class="ri-chat-3-line"></i>
+            <span>235</span>
+          </div>
+          <div class="interaction-item">
+            <i class="ri-thumb-up-line"></i>
+            <span>{{idee.nombreSoutien}}</span>
+          </div>
+        </div>
+      </div>
+    </div>
+    }
+<!--
     <div class="card">
       <div class="card-header">
         <h3 class="project-title">Nianaboli</h3>
@@ -94,36 +126,8 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
-    <div class="card">
-      <div class="card-header">
-        <h3 class="project-title">Nianaboli</h3>
-        <div class="header-actions">
-          <span class="tag">Collaboration</span>
-          <i class="ri-more-2-fill"></i>
-        </div>
-      </div>
-      <p class="description">
-        Nianaboli est une application console conçue pour permettre aux utilisateurs de gérer et de partager
-      </p>
-      <div class="cahier-de-charge">
-        <i class="ri-file-text-line"></i>
-        <span>Voir le cahier des charges</span>
-      </div>
-      <div class="card-footer">
-        <span class="date">Publié : 03/08/2025</span>
-        <div class="interaction">
-          <div class="interaction-item">
-            <i class="ri-chat-3-line"></i>
-            <span>235</span>
-          </div>
-          <div class="interaction-item">
-            <i class="ri-thumb-up-line"></i>
-            <span>65</span>
-          </div>
-        </div>
-      </div>
-    </div>
+
   </div>
 </div>
