--- a/src/app/components/porteurProjet/liste-idee-projet/liste-idee-projet.component.html
+++ b/src/app/components/porteurProjet/liste-idee-projet/liste-idee-projet.component.html
@@ -12,7 +12,7 @@
         <div class="card-content">
           <div class="title-section">
             <h2>{{idee.titre}}</h2>
-            <div class="tag">Collaboration</div>
+            <div class="tag">{{idee.domaine[0]}}</div>
           </div>
           <p class="description">
             {{idee.description}}
@@ -34,84 +34,6 @@
         </div>
       </div>
       }
-<!--
-      <div class="card">
-        <div class="card-content">
-          <div class="title-section">
-            <h2>Nianaboli</h2>
-            <div class="tag">Collaboration</div>
-          </div>
-          <p class="description">
-            Nianaboli est une application console conçue pour permettre aux utilisateurs de gérer et de partager
-          </p>
-          <div class="publie-voirplus">
-            <div class="publie">Publié : 03/08/2025</div>
-            <a style="cursor:pointer" class="voirPlus" (click)="voirPlus(2)">Voir plus <i class="ri-arrow-right-line"></i></a>
-          </div>
-          <div class="card-footer">
-            <div class="user-info">
-              <img src="logoS.png" alt="User photo">
-              <span>Niakale Diakité</span>
-            </div>
-            <div class="footer-icons">
-              <span><i class="ri-message-2-line"></i>8</span>
-              <span><i class="ri-heart-3-fill"></i> 235</span>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="card">
-        <div class="card-content">
-          <div class="title-section">
-            <h2>Nianaboli</h2>
-            <div class="tag">Collaboration</div>
-          </div>
-          <p class="description">
-            Nianaboli est une application console conçue pour permettre aux utilisateurs de gérer et de partager
-          </p>
-          <div class="publie-voirplus">
-            <div class="publie">Publié : 03/08/2025</div>
-            <a style="cursor:pointer" class="voirPlus" (click)="voirPlus(2)">Voir plus <i class="ri-arrow-right-line"></i></a>
-          </div>
-          <div class="card-footer">
-            <div class="user-info">
-              <img src="logoS.png" alt="User photo">
-              <span>Niakale Diakité</span>
-            </div>
-            <div class="footer-icons">
-              <span><i class="ri-message-2-line"></i>8</span>
-              <span><i class="ri-heart-3-fill"></i> 235</span>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="card">
-        <div class="card-content">
-          <div class="title-section">
-            <h2>Nianaboli</h2>
-            <div class="tag">Collaboration</div>
-          </div>
-          <p class="description">
-            Nianaboli est une application console conçue pour permettre aux utilisateurs de gérer et de partager
-          </p>
-          <div class="publie-voirplus">
-            <div class="publie">Publié : 03/08/2025</div>
-            <a style="cursor:pointer" class="voirPlus" (click)="voirPlus(2)">Voir plus <i class="ri-arrow-right-line"></i></a>
-          </div>
-          <div class="card-footer">
-            <div class="user-info">
-              <img src="logoS.png" alt="User photo">
-              <span>Niakale Diakité</span>
-            </div>
-            <div class="footer-icons">
-              <span><i class="ri-message-2-line"></i>8</span>
-              <span><i class="ri-heart-3-fill"></i> 235</span>
-            </div>
-          </div>
-        </div>
-      </div> -->
 
     </div>
   </div>
@@ -123,7 +45,7 @@
     <h2>Details du projet</h2>
     <div class="title-section">
       <h2> {{contenus.titre}}</h2>
-      <div class="tag">Collaboration</div>
+      <div class="tag">{{contenus.domaine[0]}}</div>
     </div>
     <p class="description">
        {{contenus.description}}
