Debut de l'implementation de la partie de gestionnaire

--- a/src/app/components/tools/sidebar-menu-gestionnaire/sidebar-menu-gestionnaire.component.html
+++ b/src/app/components/tools/sidebar-menu-gestionnaire/sidebar-menu-gestionnaire.component.html
@@ -47,6 +47,19 @@
                     }
                 }
             </div>
+            <div class="contributions-container menu-container"  [class.collapsed]="!getIsExpanded()" (click)="goToMenu(4)">
+                @if(currentMenu == 4){
+                    <i class="ri-folder-add-fill icons"></i>
+                    @if (getIsExpanded()) {
+                        <p class="menus-text"><strong>Créer un Projet</strong></p>
+                    }
+                } @else {
+                    <i class="ri-folder-add-line icons"></i>
+                    @if (getIsExpanded()) {
+                        <p class="menus-text">Créer un Projet</p>
+                    }
+                }
+            </div>
         </div>
     </div>
     <div class="center-container">
@@ -90,16 +103,16 @@
                     }
                 }
             </div>
-            <div class="contributions-container menu-container"  [class.collapsed]="!getIsExpanded()" (click)="goToMenu(4)">
-                @if(currentMenu == 4){
-                    <i class="ri-copper-coin-fill icons"></i>
+            <div class="contributions-container menu-container"  [class.collapsed]="!getIsExpanded()" (click)="goToMenu(7)">
+                @if(currentMenu == 7){
+                    <i class="ri-folder-add-fill icons"></i>
                     @if (getIsExpanded()) {
-                        <p class="menus-text"><strong>Contenus suivis</strong></p>
+                        <p class="menus-text"><strong>Créer Une Idée</strong></p>
                     }
                 } @else {
-                    <i class="ri-copper-coin-line icons"></i>
+                    <i class="ri-folder-add-line icons"></i>
                     @if (getIsExpanded()) {
-                        <p class="menus-text">Contenus suivis</p>
+                        <p class="menus-text">Créer Une Idée</p>
                     }
                 }
             </div>
