--- a/src/app/components/dashboard-gestionnaire/dashboard-gestionnaire.component.css
+++ b/src/app/components/dashboard-gestionnaire/dashboard-gestionnaire.component.css
@@ -26,8 +26,8 @@
     display: flex;
     flex-direction: column;
     flex: 1;
-    margin-left: 10%;
-    padding-left: 2.5%;
+    margin: 10px 10px;
+    padding: 5px auto;
     transition: margin-left 0.3s ease;
 }
 .dashboard.long-dashboard {
