--- a/src/app/components/idees-projet/idees-projet.component.css
+++ b/src/app/components/idees-projet/idees-projet.component.css
@@ -1,6 +1,7 @@
 .principal-container {
     width: 100%;
     height: 590px;
+    min-width: 700px;
     display: grid;
     background-color: #f4f4f4;
     grid-template-columns: 55% 45%;
@@ -25,11 +26,13 @@
     background-color: white;
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.3);
     border-radius: 32px;
+    gap: 40px;
+    padding-top: 20px;
 }
 
 .ideas-text-container {
-    width: 90%;
-    height: 90%;
+    width: 95%;
+    height: 95%;
     display: grid;
     grid-template-columns: 50% 30% 20%;
 }
@@ -75,11 +78,11 @@
 }
 
 .ideas-container {
-    width: 90%;
+    width: 85%;
     height: 90%;
-    align-self: center;
-    justify-self: center;
-    background-color: bisque;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
 }
 
 .right-container {
@@ -154,11 +157,232 @@
 
 p {
     margin: 0;
-    width: fit-content;
-    height: fit-content;
+    width: auto;
+    height: auto;
+    padding: 0;
 }
 
 .propose-button.expanded {
     transform: scale(0.9);
 }
 
+.idea-container {
+    width: 90%;
+    height: fit-content;
+    background-color: white;
+    display: grid;
+    grid-template-rows: auto auto auto auto;
+    gap: 10px;
+    padding: 5%;
+    align-self: center;
+    box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.3);
+    border-radius: 32px;
+}
+
+.idea-title-container {
+    width: 100%;
+    height: fit-content;
+    display: grid;
+    grid-template-columns: 50% 40% 10%;
+    align-items: center;
+    gap: 10px;
+}
+
+h2 {
+    margin: 0;
+    width: fit-content;
+    height: fit-content;
+}
+
+.idea-title {
+    font-size: 20pt;
+    color: #334DAA;
+}
+
+.idea-option {
+    font-size: 24px;
+    justify-self: center;
+    transition: transform 0.3s ease-in-out;
+    border-radius: 100px;
+}
+
+.idea-option:hover {
+    cursor: pointer;
+    transform: scale(1.1);
+    background-color: #d0daff;
+    padding: 2px;
+}
+
+.idea-option:active {
+    transform: scale(0.9);
+}
+
+.idea-date {
+    justify-self: end;
+}
+
+.idea-description-container {
+    width: 100%;
+}
+
+.idea-cdc-container {
+    width: 100%;
+    display: grid;
+    grid-template-columns: 5% 90% 5%;
+    align-items: center;
+    justify-items: center;
+}
+
+.idea-pdf-logo {
+    font-size: 24px;
+    color: #334DAA;
+}
+
+.idea-pdf-text {
+    color: #334DAA;
+    font-weight: bold;
+    justify-self: start;
+    margin-left: 5px;
+    transition: transform 0.2s ease-in-out;
+}
+
+.idea-pdf-text:hover {
+    cursor: pointer;
+    transform: scale(1.02);
+}
+
+.idea-pdf-text:active {
+    transform: scale(0.9);
+}
+
+.idea-help {
+    font-size: 24px;
+    transition: transform 0.3s ease-in-out;
+}
+
+.idea-help:hover {
+    cursor: pointer;
+    transform: scale(1.1);
+}
+
+.idea-help:active {
+    transform: scale(0.9);
+}
+
+.idea-help.chosen {
+    color: #334DAA;
+}
+
+.idea-comments-container {
+    width: 96%;
+    height: fit-content;
+    background-color: #f1f1f1;
+    border-radius: 10px;
+    padding: 2%;
+    display: grid;
+    grid-template-rows: 20% 80%;
+    box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.3);
+}
+
+.idea-comments-header {
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: 5% 75% 20%;
+    align-items: center;
+    gap: 5px;
+}
+
+.idea-comments-logo {
+    font-size: 20px;
+}
+
+.idea-comments-text {
+    font-size: 10pt;
+    font-weight: bold;
+}
+
+.idea-comments-see-more {
+    font-size: 10pt;
+    color: #334DAA;
+    font-weight: bold;
+    justify-self: end;
+    margin-right: 10px;
+    transition: transform 0.1s ease-in-out;
+}
+
+.idea-comments-see-more:hover {
+    cursor: pointer;
+    transform: scale(1.02);
+}
+
+.idea-comments-see-more:active {
+    transform: scale(0.9);
+}
+
+.idea-comments-body {
+    width: 97.5%;
+    width: 97.5%;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    padding: 1.25%;
+}
+
+.comment {
+    background-color: white;
+    display: grid;
+    grid-template-rows: auto auto;
+    border-radius: 10px;
+    box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.3);
+    gap: 5px;
+    width: 98%;
+    height: 98%;
+    padding: 1%;
+}
+
+.comment-header {
+    display: grid;
+    grid-template-columns: 10% 60% 30%;
+    align-items: center;
+}
+
+.comment-user-profile {
+    width: 24px; 
+    height: auto;
+    justify-self: center;
+    border-radius: 100px;
+    border: 1px solid #334DAA
+}
+
+.comment-user-name {
+    font-size: 10pt;
+}
+
+.comment-date {
+    font-size: 10pt;
+    justify-self: end;
+    margin-right: 5px;
+}
+
+.comment-body {
+    width: 98%;
+    height: 98%;
+    padding: 1%;
+}
+
+.comment-content {
+    font-size: 10pt;
+}
+
+@media only screen and (max-width: 720px){
+    .principal-container {
+        grid-template-columns: none;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .right-container {
+        display: none;
+    }
+}
