--- a/src/app/components/idees-projet/idees-projet.component.css
+++ b/src/app/components/idees-projet/idees-projet.component.css
@@ -1,12 +1,14 @@
 .principal-container {
     width: 100%;
-    height: 590px;
+    height: 100vh;
     min-width: 700px;
     display: grid;
-    background-color: #f4f4f4;
+    background-color: #f1f1f1;
     grid-template-columns: 55% 45%;
     overflow: hidden;
     z-index: 5;
+    align-items: center;
+    justify-content: center;
     transition: grid-template-columns 0.4s ease-in-out;
 }
 
@@ -16,7 +18,7 @@
 
 .left-container {
     width: 90%;
-    height: 90%;
+    height: fit-content;
     display: grid;  
     align-self: center;
     justify-self: end;
@@ -26,7 +28,7 @@
     background-color: white;
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.3);
     border-radius: 32px;
-    gap: 40px;
+    gap: 20px;
     padding-top: 20px;
 }
 
@@ -79,11 +81,17 @@
 
 .ideas-container {
     width: 85%;
-    height: 90%;
+    height: 68vh;
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 20px;
+    overflow-y: auto; 
+    overflow-x: hidden;
+    scrollbar-width: none;
+    scrollbar-color: #334DAA transparent;
+    padding: 1%;
 }
+
 
 .right-container {
     width: 100%;
@@ -168,7 +176,7 @@ p {
 
 .idea-container {
     width: 90%;
-    height: fit-content;
+    height: 100%;
     background-color: white;
     display: grid;
     grid-template-rows: auto auto auto auto;
@@ -219,10 +227,12 @@ h2 {
 
 .idea-date {
     justify-self: end;
+    font-size: 10pt;
 }
 
 .idea-description-container {
     width: 100%;
+    font-size: 10pt;
 }
 
 .idea-cdc-container {
@@ -243,6 +253,7 @@ h2 {
     font-weight: bold;
     justify-self: start;
     margin-left: 5px;
+    font-size: 10pt;
     transition: transform 0.2s ease-in-out;
 }
 
@@ -275,7 +286,7 @@ h2 {
 
 .idea-comments-container {
     width: 96%;
-    height: fit-content;
+    height: 96%;
     background-color: #f1f1f1;
     border-radius: 10px;
     padding: 2%;
@@ -322,7 +333,7 @@ h2 {
 
 .idea-comments-body {
     width: 97.5%;
-    width: 97.5%;
+    height: 97.5%;
     display: flex;
     flex-direction: column;
     gap: 5px;
@@ -372,6 +383,14 @@ h2 {
 }
 
 .comment-content {
+    font-size: 10pt;
+}
+
+.idea-comments-no-comment {
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    align-content: center;
     font-size: 10pt;
 }
 
