--- a/src/app/components/page-visiteur/page-visiteur.component.html
+++ b/src/app/components/page-visiteur/page-visiteur.component.html
@@ -89,7 +89,7 @@
           }
         }
         <div class="dernier">
-       <button type="button" class="bouton3" >Voir plus <i class="ri-arrow-right-line like2" ></i></button>
+       <button type="button" class="bouton3" (click)="voirplus(ideeprojet)">Voir plus <i class="ri-arrow-right-line like2" ></i></button>
        <div class="nbsoutien">{{ideeprojet.nombreSoutien}}</div>
         <i class="ri-hand-heart-line bolo like" ></i>
        </div>
