--- a/src/app/components/idees-projet/idees-projet.component.css
+++ b/src/app/components/idees-projet/idees-projet.component.css
@@ -81,7 +81,7 @@
 
 .ideas-container {
     width: 85%;
-    height: 68vh;
+    height: 70vh;
     display: flex;
     flex-direction: column;
     gap: 20px;
@@ -176,13 +176,14 @@ p {
 
 .idea-container {
     width: 90%;
-    height: 100%;
+    height: 90%;
     background-color: white;
     display: grid;
-    grid-template-rows: auto auto auto auto;
-    gap: 10px;
+    grid-template-rows: auto auto auto auto auto;
+    gap: 20px;
     padding: 5%;
-    align-self: center;
+    align-items: center;
+    align-content: center;
     box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.3);
     border-radius: 32px;
 }
@@ -228,6 +229,7 @@ h2 {
 .idea-date {
     justify-self: end;
     font-size: 10pt;
+    font-weight: bold;
 }
 
 .idea-description-container {
@@ -292,12 +294,15 @@ h2 {
     padding: 2%;
     display: grid;
     grid-template-rows: 20% 80%;
+    align-items: center;
     box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.3);
 }
 
 .idea-comments-header {
-    width: 100%;
-    height: 100%;
+    width: 95%;
+    height: fit-content;
+    padding-left: 2.5%;
+    padding-right: 2.5%;
     display: grid;
     grid-template-columns: 5% 75% 20%;
     align-items: center;
@@ -306,6 +311,7 @@ h2 {
 
 .idea-comments-logo {
     font-size: 20px;
+    justify-self: start;
 }
 
 .idea-comments-text {
@@ -374,16 +380,19 @@ h2 {
     font-size: 10pt;
     justify-self: end;
     margin-right: 5px;
+    font-weight: bold;
 }
 
 .comment-body {
-    width: 98%;
+    width: 100%;
     height: 98%;
-    padding: 1%;
+    padding-top: 1%;
+    padding-bottom: 1%;
 }
 
 .comment-content {
     font-size: 10pt;
+    margin-left: 10%;
 }
 
 .idea-comments-no-comment {
@@ -391,17 +400,38 @@ h2 {
     height: 100%;
     align-items: center;
     align-content: center;
+    text-align: center;
     font-size: 10pt;
 }
 
-@media only screen and (max-width: 720px){
-    .principal-container {
-        grid-template-columns: none;
-        display: flex;
-        flex-direction: column;
-    }
+.idea-domaines-container {
+    width: 98%;
+    height: 98%;
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    overflow-y: hidden;
+    overflow-x: auto;
+    scrollbar-width: none;
+    padding: 1%;
+}
 
-    .right-container {
-        display: none;
-    }
+.idea-domaine-container {
+    width: fit-content;
+    height: fit-content;
+    background-color: #334DAA;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: 10pt;
+    font-weight: bold;
+    color: white;
+    border-radius: 10px;
+    padding-left: 5px;
+    padding-right: 5px;
+    white-space: nowrap;
+    padding-top: 3px;
+    padding-bottom: 3px;
+    box-shadow: 0px 0px 2.5px 0px rgba(0, 0, 0, 0.3);
 }
