--- a/src/app/components/idees-projet/idees-projet.component.html
+++ b/src/app/components/idees-projet/idees-projet.component.html
@@ -29,7 +29,7 @@
                     <div class="idea-cdc-container">
                         <i class="ri-file-pdf-2-line idea-pdf-logo"></i>
                         <p class="idea-pdf-text"><u>Voir le cahier des charges</u></p>
-                        <i class="ri-hand-heart-line idea-help"></i>
+                        <i class="ri-hand-heart-line idea-help" (click)="helpIdea(ideeProjet.id)"></i>
                     </div>
                     @if(ideeProjet.commentaireIdeeProjets.length !== 0) {
                         <div class="idea-comments-container">
