Modifie le style des idées affichées

--- a/src/app/components/idees-projet/idees-projet.component.css
+++ b/src/app/components/idees-projet/idees-projet.component.css
@@ -176,7 +176,7 @@ p {
 
 .idea-container {
     width: 90%;
-    height: 90%;
+    height: fit-content;
     background-color: white;
     display: grid;
     grid-template-rows: auto auto auto auto auto;
