Ajoute le scroll bar

--- a/src/app/components/idees-projet/idees-projet.component.css
+++ b/src/app/components/idees-projet/idees-projet.component.css
@@ -87,7 +87,7 @@
     gap: 20px;
     overflow-y: auto; 
     overflow-x: hidden;
-    scrollbar-width: none;
+    scrollbar-width: thin;
     scrollbar-color: #334DAA transparent;
     padding: 1%;
 }
