--- a/src/app/components/detail-commentaire/detail-commentaire.component.css
+++ b/src/app/components/detail-commentaire/detail-commentaire.component.css
@@ -1,7 +1,8 @@
 * {
   margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+    padding: 0;
+    box-sizing: border-box;
+    
 }
 
 body {
@@ -12,9 +13,9 @@ body {
 
 
 .conteneur {
-  max-width: 800px;
-  margin: 0 auto;
-  padding: 20px;
+max-width: 800px;
+    padding: 20px;
+    margin-left: 250px; 
 }
 
 .carte-profil {
@@ -22,17 +23,16 @@ body {
   border-radius: 8px;
   padding: 24px;
   margin-bottom: 20px;
+  width: 749px;
 }
 
 .entete-profil {
   display: flex;
   align-items: flex-start;
-  gap: 16px;
   margin-bottom: 16px;
 }
 
 .entete-profil i{
-    margin-top: 40px;
     background-color: #000000;
     
 }
@@ -55,24 +55,41 @@ body {
   color: #000000;
   font-size: 14px;
   margin-bottom: 8px;
-  padding-left: 10px;
+  margin-top: 15px;
+  display: flex;
+  justify-content: space-between;
+  text-align: center;
 }
-
-.localisation-profil {
+h2{
+  width: 300px !important;
+}
+.user{
+   width: 635px;
+    font-size: 31px;
+    font-weight: bold;
+    text-align: left;
     display: flex;
-    gap: 400px;
-  color: #000000;
-  font-size: 13px;
+    padding-left: 12px;
+    flex-direction: column;
 }
+.localisation-profil {
+display: flex
+;
+    gap: 381px;
+    color: #000000;
+    font-size: 13px;
+    
+}
+   
+
 
 .description-profil {
-  display: flex;
-  justify-content: center;  
-  align-items: center;     
+  display: flex;   
   height: 150px;                
   background-color: #FFFFFF;
   color: #555;
-  padding-left: 18px;
+  width: 697px;
+  padding-left: 18px !important;
   font-size: 14px;
   line-height: 1.5;
   margin-bottom: 16px;
@@ -85,24 +102,39 @@ body {
 .statistiques-profil {
   display: flex;
   align-items: center;
-  gap: 8px;
+  
   margin-bottom: 16px;
 }
 
 .nombre-statistiques {
-  font-weight: bold;
-  color: #000000;
+ font-weight: bold;
+    color: #000000;
+    margin-left: 440px;
+    margin-top: 9px;
 }
 
 .icone-statistiques {
   color: #000000;
   font-size: 25px;
+  margin-top: 2px;
 }
 
 .lien-profil {
   color: #334DAA;
   font-size: 14px;
-  margin-right: 440px ;
+  
+}
+.icon2{
+  background-color: #000000;
+    color: #FFFFFF;
+    font-size: 48px;
+    text-align: center;
+    padding-top: 2px;
+    width: 62px;
+    height: 64px;
+    border-radius: 50%;
+   
+
 }
 
 .lien-profil:hover {
@@ -112,7 +144,7 @@ body {
 .section-commentaires {
   
   border-radius: 8px;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+  
 }
 
 .titre-commentaires {
@@ -120,19 +152,22 @@ body {
   font-weight: 600;
   margin-bottom: 20px;
   color: #000000;
+  margin-left: 27px;
   
 }
 
 .commentaire {
-  margin-left: 30px;
-  display: flex;
-  gap: 12px;
-  margin-bottom: 16px;
-  padding: 16px;
-  background: white;
-  border-radius: 15px;
-  border: 1px solid #e5e7eb;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.05);
+  margin-left: 21px;
+    display: flex
+;
+    gap: 12px;
+    margin-bottom: 16px;
+    padding: 16px;
+    background: white;
+    border-radius: 15px;
+    border: 1px solid #e5e7eb;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.05);
+    width: 721px;
 }
 
 .commentaire:last-child {
@@ -142,7 +177,9 @@ body {
 .avatar-commentaire {
   background-color: #000000;
   color: #FFFFFF;
-  font-size: 35px;
+    font-size: 30px;
+    text-align: center;
+    padding-top: 2px;
   width: 40px;
   height: 40px;
   border-radius: 50%;
@@ -163,8 +200,9 @@ body {
 
 .auteur-commentaire {
   font-weight: 600;
-  color: #1a1a1a;
-  font-size: 14px;
+    color: #1a1a1a;
+    font-size: 14px;
+    width: 540px;
 }
 
 .badge-commentaire {
@@ -185,11 +223,17 @@ body {
 }
 
 .date-commentaire {
-  color: #888;
-  font-size: 12px;
-  font-style: italic;
+  color: black;
+  
   text-align: right;
   margin-top: 8px;
+   
+   
+   font-size: 12px;
+   font-family:Arial, Helvetica, sans-serif;
+   font-style: italic;
+   font-weight: bold;
+
 }
 .contenu-commentaire1 .actions-commentaire{
     color: #23E311;
@@ -205,3 +249,8 @@ body {
 .actions-commentaire:hover {
   text-decoration: underline;
 }
+.icon{font-size: 50px; 
+  color: white;
+width: 30px !important;
+}
+
