--- a/src/app/components/detail-commentaire/detail-commentaire.component.html
+++ b/src/app/components/detail-commentaire/detail-commentaire.component.html
@@ -4,28 +4,32 @@
     <div class="carte-profil">
         <div class="entete-profil">
             
-            <i class="ri-user-fill avatar-profil" style="font-size: 50px; color: white;"></i>
+            <i class="ri-user-fill avatar-profil" class=""></i>
             <div class="info-profil">
-                <h1>Nianaboli</h1>
-                <div class="sous-titre-profil"> <h2> Mme Dembelle Fatoumata Kaloga </h2> </div>
+                <h1>{{listecommentaire.titre}}</h1>
+                
+                <div class="sous-titre-profil"> <i class="ri-user-fill icon2"></i> <div class="user"> {{listecommentaire.utilisateur.nom+ '  '+listecommentaire.utilisateur.prenom}}
                 <div class="localisation-profil">
                     <p style="color: #23E311;"><b>Porteurs d'Idées</b></p>
-                    <p>Le 06/07/2024 à 20h01</p></div>
-            </div>
+                    <p class="date-commentaire">Le {{listecommentaire.datePublication|date:'dd/MM/yyyy'}} à {{listecommentaire.datePublication|date:'HH\'h\'mm'}}</p></div>
+            </div>     
+                </div>
+             </div>
+               
         </div>
         
         <div class="description-profil1">
-            <h3> Domaine : Collaboration, Bénévolat, Informatique, Développement. </h3>
+            <h3> {{listecommentaire.domaine}} </h3>
         </div>
         
         <div class="description-profil">
-            Nianaboli est une application console conçue pour permettre aux utilisateurs de gérer et de partager efficacement leurs dépenses collaboratives.
+            {{listecommentaire.description}}
         </div>
         
         <div class="statistiques-profil">
             <i class="ri-edit-box-line" style="font-size: 25px;"></i>
-            <a href="#" class="lien-profil"><b>Voir le cahier des charges!</b></a>
-            <span class="nombre-statistiques">235</span>
+            <a [href]="'http://localhost:8080' + listecommentaire.uriCDC" target="_blank" class="lien-profil">Voir le cahier des charges!</a>
+            <span class="nombre-statistiques">{{listecommentaire.nombreSoutien}}</span>
             <i class="ri-hand-heart-line icone-statistiques"></i>
         </div>
         
@@ -35,40 +39,24 @@
     <div class="section-commentaires">
         <h2 class="titre-commentaires">Commentaires</h2>
         
-        <div class="commentaire">
-           
-            <i class="ri-user-fill avatar-commentaire "></i>
-            <div class="contenu-commentaire1">
-                <div class="entete-commentaire">
-                    <div>
-                        <span class="auteur-commentaire">Mohamed Diop</span>
-                        <span class="badge-commentaire">Professionnel</span>
-                    </div>
-                    <a href="#" class="actions-commentaire">Porteurs d'idées</a>
-                </div>
-                <div class="texte-commentaire">
-                    J'aimerais me joindre à ce projet et je suis disponible pour toute collaboration. Je suis un développeur mobile avec une expérience dans React Native et Flutter.
-                </div>
-                <div class="date-commentaire">Le 06/07/2024 à 20h01</div>
-            </div>
-        </div>
+        
+        @if (listecommentaire?.commentaireIdeeProjets) {
         @for(commentaire of listecommentaire.commentaireIdeeProjets;track listecommentaire.id){
         <div class="commentaire" >
             <i class="ri-user-fill avatar-commentaire"></i>
             <div class="contenu-commentaire">
                 <div class="entete-commentaire">
-                    <div>
-                        <span class="auteur-commentaire">{{commentaire.utilisateur.prenom+'  '+commentaire.utilisateur.nom}}</span>
-                        <span class="badge-commentaire">Contributeur</span>
+                    <div  class="auteur-commentaire">
+                       {{commentaire.utilisateur.prenom+'  '+commentaire.utilisateur.nom}}
                     </div>
-                    <a href="#" class="actions-commentaire">Contributeurs</a>
+                    <div class="actions-commentaire">Contributeurs</div>
                 </div>
                 <div class="texte-commentaire">
                    {{commentaire.contenu}}
                 </div>
-                <div class="date-commentaire">Le{{commentaire.datePublication|date:'dd/MM/yyyy'}} à {{commentaire.datePublication|date:'HH\'h\'mm'}}</div>
+                <div class="date-commentaire">Le {{commentaire.dateCommentaire|date:'dd/MM/yyyy'}} à {{commentaire.dateCommentaire|date:'HH\'h\'mm'}}</div>
             </div>
-        </div>}
+        </div>}}
 
       
                    
