--- a/src/app/components/page-visiteur/page-visiteur.component.css
+++ b/src/app/components/page-visiteur/page-visiteur.component.css
@@ -62,6 +62,12 @@
    box-sizing: border-box;
 }
 
+.user2{
+   width: 137px;
+    padding-top: 4px;
+    font-size: 14px;
+    font-weight: bold;
+}
 
 .conteneurinput{
    width: 270px;
