--- a/src/app/components/page-visiteur/page-visiteur.component.html
+++ b/src/app/components/page-visiteur/page-visiteur.component.html
@@ -40,7 +40,7 @@
           @for (commentaire of ideeprojet.commentaireIdeeProjets.slice(0, 2); track commentaire.id) {
             <div class="commentaire">
               <div class="acteur"><i class="ri-user-fill icon2"></i>
-                <div class="user">{{ commentaire.utilisateur.nom+'   '+commentaire.utilisateur.prenom }}  </div>
+                <div class="user2">{{ commentaire.utilisateur.nom+'   '+commentaire.utilisateur.prenom }}  </div>
                <!--role-->
                 @if(commentaire.utilisateur.role  ==='CONTRIBUTEUR'){
                 <div class="rolec">C</div>
