quelque modification sur le detaille de projet

--- a/src/app/components/contributeur/detaille/detaille-projet/detaille-projet.component.html
+++ b/src/app/components/contributeur/detaille/detaille-projet/detaille-projet.component.html
@@ -2,13 +2,24 @@
     <div class="page-container">
         <header class="main-header">
             <div class="header-left">
-                <h1 class="project-title">Nianaboli</h1>
-                <div class="project-status">
-                    <span class="badge debutant">Débutant</span>
-                    <span class="badge en-cours">En cours</span>
+                <div class="title-actions">
+                    <h1 class="project-title">Nianaboli</h1>
+                    <div class="project-status">
+                        <span class="badge debutant">Débutant</span>
+                        <span class="badge en-cours">En cours</span>
+                    </div>
+                    <a href="#" class="idea-link">Voir l'idée</a>
                 </div>
-                <a href="#" class="idea-link">Voir l'idée</a>
+                
+                <div class="manager-profile">
+                    <img src="logoS.png" alt="Amadou Diallo" class="profile-pic">
+                    <div class="manager-info">
+                        <h3>Amadou Diallo</h3>
+                        <p>Gestionnaire</p>
+                    </div>
+                </div>
             </div>
+            
             <div class="header-right">
                 <div class="contributors-header">
                     <div class="contributors-title-group">
@@ -26,13 +37,6 @@
         <main class="main-content">
             <section class="details-section">
                 <div class="card project-details-card">
-                    <div class="manager-profile">
-                        <img src="logoS.png" alt="Amadou Diallo" class="profile-pic">
-                        <div class="manager-info">
-                            <h3>Amadou Diallo</h3>
-                            <p>Gestionnaire</p>
-                        </div>
-                    </div>
                     <p class="project-description">
                         Nianaboli est une application console conçue pour permettre aux utilisateurs de gérer et de partager efficacement leurs dépenses collaboratives.
                     </p>
@@ -75,7 +79,7 @@
                         <div class="item-content">
                             <div class="item-details">
                                 <div class="profile-group">
-                                    <img src="https://via.placeholder.com/20" alt="Profile" class="item-profile-pic">
+                                    <img src="logoS.png" alt="Profile" class="item-profile-pic">
                                     <p class="item-author">Par Abdoul Ibrahima Samaké</p>
                                 </div>
                                 <h4 class="item-title">Intégrer le backend et le front end</h4>
@@ -94,7 +98,7 @@
                         <div class="item-content">
                             <div class="item-details">
                                 <div class="profile-group">
-                                    <img src="https://via.placeholder.com/20" alt="Profile" class="item-profile-pic">
+                                    <img src="logoS.png" alt="Profile" class="item-profile-pic">
                                     <p class="item-author">Par Amadou Diallo</p>
                                 </div>
                                 <h4 class="item-title">Développer le backend de l'application</h4>
@@ -113,7 +117,7 @@
                         <div class="item-content">
                             <div class="item-details">
                                 <div class="profile-group">
-                                    <img src="https://via.placeholder.com/20" alt="Profile" class="item-profile-pic">
+                                    <img src="logoS.png" alt="Profile" class="item-profile-pic">
                                     <p class="item-author">Par Nanténin Kéïta</p>
                                 </div>
                                 <h4 class="item-title">Faire le diagramme de classes pour le backend</h4>
@@ -132,7 +136,7 @@
                         <div class="item-content">
                             <div class="item-details">
                                 <div class="profile-group">
-                                    <img src="https://via.placeholder.com/20" alt="Profile" class="item-profile-pic">
+                                    <img src="logoS.png" alt="Profile" class="item-profile-pic">
                                     <p class="item-author">Par Ibrahim Sory Diallo</p>
                                 </div>
                                 <h4 class="item-title">Faire le front end de l'application</h4>
@@ -151,7 +155,7 @@
                         <div class="item-content">
                             <div class="item-details">
                                 <div class="profile-group">
-                                    <img src="https://via.placeholder.com/20" alt="Profile" class="item-profile-pic">
+                                    <img src="logoS.png" alt="Profile" class="item-profile-pic">
                                     <p class="item-author">Par ...</p>
                                 </div>
                                 <h4 class="item-title">Faire le design pour le front end</h4>
@@ -181,7 +185,7 @@
                         </div>
                     </div>
                     <div class="contributor-badges">
-                        <img src="https://via.placeholder.com/30/f0f0f0" alt="Badge" class="badge-icon">
+                        <img src="Badge 3.png" alt="Badge" class="badge-icon">
                         <span class="badge intermediaire">Intermédiaire</span>
                     </div>
                 </div>
@@ -196,7 +200,7 @@
                         </div>
                     </div>
                     <div class="contributor-badges">
-                        <img src="https://via.placeholder.com/30/f0f0f0" alt="Badge" class="badge-icon">
+                        <img src="Badge 5.png" alt="Badge" class="badge-icon">
                         <span class="badge avance">Avancé</span>
                     </div>
                 </div>
@@ -211,7 +215,7 @@
                         </div>
                     </div>
                     <div class="contributor-badges">
-                        <img src="https://via.placeholder.com/30/f0f0f0" alt="Badge" class="badge-icon">
+                        <img src="Badge 3.png" alt="Badge" class="badge-icon">
                         <span class="badge intermediaire">Intermédiaire</span>
                     </div>
                 </div>
@@ -226,7 +230,7 @@
                         </div>
                     </div>
                     <div class="contributor-badges">
-                        <img src="https://via.placeholder.com/30/f0f0f0" alt="Badge" class="badge-icon">
+                        <img src="Badge 1.png" alt="Badge" class="badge-icon">
                         <span class="badge debutant">Débutant</span>
                     </div>
                 </div>
@@ -241,7 +245,7 @@
                         </div>
                     </div>
                     <div class="contributor-badges">
-                        <img src="https://via.placeholder.com/30/f0f0f0" alt="Badge" class="badge-icon">
+                        <img src="Badge 1.png" alt="Badge" class="badge-icon">
                         <span class="badge debutant">Débutant</span>
                     </div>
                 </div>
